Update to deploy at the artifactory.

--- a/Modbus4J/pom.xml
+++ b/Modbus4J/pom.xml
@@ -1,71 +1,159 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>com.infiniteautomation</groupId>
-    <artifactId>modbus4j</artifactId>
-    <version>3.0.4-SNAPSHOT</version>
-    <name>Modbus4j Library</name>
-    <build>
-        <sourceDirectory>src</sourceDirectory>
-        <testSourceDirectory>src_test</testSourceDirectory>
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
-            </plugin>
-            <plugin>
-			   <groupId>org.apache.maven.plugins</groupId>
-			   <artifactId>maven-deploy-plugin</artifactId>
-			   <version>2.8.1</version>
-			   <configuration>
-			      <skip>true</skip>
-			   </configuration>
-			</plugin>
-			<plugin>
-			   <groupId>org.sonatype.plugins</groupId>
-			   <artifactId>nexus-staging-maven-plugin</artifactId>
-			   <version>1.5.1</version>
-			   <executions>
-			      <execution>
-			         <id>default-deploy</id>
-			         <phase>deploy</phase>
-			         <goals>
-			            <goal>deploy</goal>
-			         </goals>
-			      </execution>
-			   </executions>
-			   <configuration>
-			      <serverId>ias-releases</serverId>
-			      <nexusUrl>https://maven.mangoautomation.net/</nexusUrl>
-			      <skipStaging>true</skipStaging>
-			   </configuration>
-			</plugin>
-        </plugins>
-    </build>
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.0</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-logging</groupId>
-            <artifactId>commons-logging</artifactId>
-            <version>1.1.1</version>
-        </dependency>
-    </dependencies>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.infiniteautomation2</groupId>
+	<artifactId>modbus4j</artifactId>
+	<version>3.0.4-SNAPSHOT</version>
+	<name>Modbus4j Library</name>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+	</dependencies>
+
+	<repositories>
+		<repository>
+			<id>central</id>
+			<url>http://10.13.117.196:8081/artifactory/libs-release</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>snapshots</id>
+			<url>http://10.13.117.196:8081/artifactory/libs-snapshot</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+		</repository>
+	</repositories>
+	<pluginRepositories>
+		<pluginRepository>
+			<id>central</id>
+			<url>http://10.13.117.196:8081/artifactory/libs-release</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</pluginRepository>
+		<pluginRepository>
+			<id>snapshots</id>
+			<url>http://10.13.117.196:8081/artifactory/libs-snapshot</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+		</pluginRepository>
+	</pluginRepositories>
+	
 	<distributionManagement>
-	   <snapshotRepository>
-	      <id>ias-snapshots</id>
-	      <url>https://maven.mangoautomation.net/repository/ias-snapshot/</url>
-	   </snapshotRepository>
-	   <repository>
-	      <id>ias-releases</id>
-	   	  <url>https://maven.mangoautomation.net/repository/ias-release/</url>
-	   </repository>
+	    <snapshotRepository>
+	        <id>snapshots</id>
+	        <name>AY216725D02-snapshots</name>
+	        <url>http://10.13.117.196:8081/artifactory/libs-snapshot-local</url>
+	    </snapshotRepository>
 	</distributionManagement>
+
+	<build>
+		<sourceDirectory>src</sourceDirectory>
+		<testSourceDirectory>src_test</testSourceDirectory>
+
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.1</version>
+					<configuration>
+						<source>1.7</source>
+						<target>1.7</target>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-jar-plugin</artifactId>
+					<version>2.4</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-war-plugin</artifactId>
+					<version>2.4</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-source-plugin</artifactId>
+					<version>2.1.2</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.jfrog.buildinfo</groupId>
+					<artifactId>artifactory-maven-plugin</artifactId>
+					<version>2.4.1</version>
+					<inherited>false</inherited>
+					<executions>
+						<execution>
+							<id>build-info</id>
+							<goals>
+								<goal>publish</goal>
+							</goals>
+							<configuration>
+								<deployProperties>
+									<gradle>awesome</gradle>
+								</deployProperties>
+								<artifactory>
+									<includeEnvVars>true</includeEnvVars>
+									<timeoutSec>60</timeoutSec>
+									<propertiesFile>publish.properties</propertiesFile>
+								</artifactory>
+								<publisher>
+									<contextUrl>http://10.13.117.196:8081/artifactory</contextUrl>
+									<username>${username}</username>
+									<password>${password}</password>
+									<excludePatterns>*-tests.jar</excludePatterns>
+									<repoKey>libs-release-local</repoKey>
+									<snapshotRepoKey>libs-snapshot-local</snapshotRepoKey>
+								</publisher>
+								<buildInfo>
+									<buildName>plugin-demo</buildName>
+									<buildNumber>1</buildNumber>
+									<buildUrl>http://build-url.org</buildUrl>
+								</buildInfo>
+								<licenses>
+									<autoDiscover>true</autoDiscover>
+									<includePublishedArtifacts>false</includePublishedArtifacts>
+									<runChecks>true</runChecks>
+									<scopes>compile,runtime</scopes>
+									<violationRecipients>build@organisation.com</violationRecipients>
+								</licenses>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-jar-plugin</artifactId>
+					<configuration>
+						<archive>
+							<addMavenDescriptor>false</addMavenDescriptor>
+						</archive>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-war-plugin</artifactId>
+					<configuration>
+						<archive>
+							<addMavenDescriptor>false</addMavenDescriptor>
+						</archive>
+					</configuration>
+				</plugin>
+			</plugins>
+
+		</pluginManagement>
+	</build>
 </project>
